gac_sb/objects/Code_NAF_2__c.object
<CustomObject>
    <description>Liste des codes NAF 2 et leurs labels</description>
    <fields>
        <fullName>ACS_Palier1__c</fullName>
        <inlineHelpText>Palier 1: en dessous de ce nombre de salarié, le compte aura un ciblage correspondant à Valeur Palier1 ACS</inlineHelpText>
        <label>Palier 1 ACS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACS_Palier2__c</fullName>
        <inlineHelpText>Palier 2: en dessous de ce nombre de salarié, le compte aura un ciblage correspondant à Valeur Palier 2 ACS</inlineHelpText>
        <label>Palier 2 ACS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACS_defaultCiblage__c</fullName>
        <label>Ciblage par défaut ACS</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hors cible</fullName>
                </value>
                <value>
                    <fullName>Cible</fullName>
                </value>
                <value>
                    <fullName>Cible principale</fullName>
                </value>
                <value>
                    <fullName>Top Cible</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACS_valeur_palier1__c</fullName>
        <label>Valeur palier 1 ACS</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hors cible</fullName>
                </value>
                <value>
                    <fullName>Cible</fullName>
                </value>
                <value>
                    <fullName>Cible principale</fullName>
                </value>
                <value>
                    <fullName>Top Cible</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACS_valeur_palier2__c</fullName>
        <label>Valeur palier 2 ACS</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hors cible</fullName>
                </value>
                <value>
                    <fullName>Cible</fullName>
                </value>
                <value>
                    <fullName>Cible principale</fullName>
                </value>
                <value>
                    <fullName>Top Cible</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACS_valeur_palier3__c</fullName>
        <label>Valeur palier 3 ACS</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hors cible</fullName>
                </value>
                <value>
                    <fullName>Cible</fullName>
                </value>
                <value>
                    <fullName>Cible principale</fullName>
                </value>
                <value>
                    <fullName>Top Cible</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Code_NAF_2_code__c</fullName>
        <externalId>true</externalId>
        <label>Code NAF 2</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IL_Palier1__c</fullName>
        <inlineHelpText>Palier 1: en dessous de ce nombre de salarié, le compte aura un ciblage correspondant à Valeur Palier1 IL</inlineHelpText>
        <label>Palier 1 IL</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IL_Palier2__c</fullName>
        <inlineHelpText>Palier 2: en dessous de ce nombre de salarié, le compte aura un ciblage correspondant à Valeur Palier 2 IL</inlineHelpText>
        <label>Palier 2 IL</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IL_defaultCiblage__c</fullName>
        <label>Ciblage par défaut IL</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hors cible</fullName>
                </value>
                <value>
                    <fullName>Cible</fullName>
                </value>
                <value>
                    <fullName>Cible principale</fullName>
                </value>
                <value>
                    <fullName>Top Cible</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IL_valeur_palier1__c</fullName>
        <label>Valeur palier 1 IL</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hors cible</fullName>
                </value>
                <value>
                    <fullName>Cible</fullName>
                </value>
                <value>
                    <fullName>Cible principale</fullName>
                </value>
                <value>
                    <fullName>Top Cible</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IL_valeur_palier2__c</fullName>
        <label>Valeur palier 2 IL</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hors cible</fullName>
                </value>
                <value>
                    <fullName>Cible</fullName>
                </value>
                <value>
                    <fullName>Cible principale</fullName>
                </value>
                <value>
                    <fullName>Top Cible</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IL_valeur_palier3__c</fullName>
        <label>Valeur palier 3 IL</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hors cible</fullName>
                </value>
                <value>
                    <fullName>Cible</fullName>
                </value>
                <value>
                    <fullName>Cible principale</fullName>
                </value>
                <value>
                    <fullName>Top Cible</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>INNO_Palier1__c</fullName>
        <inlineHelpText>Palier 1: en dessous de ce nombre de salarié, le compte aura un ciblage correspondant à Valeur Palier1 INNO</inlineHelpText>
        <label>Palier 1 INNO</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>INNO_Palier2__c</fullName>
        <inlineHelpText>Palier 2: en dessous de ce nombre de salarié, le compte aura un ciblage correspondant à Valeur Palier 2 INNO</inlineHelpText>
        <label>Palier 2 INNO</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>INNO_defaultCiblage__c</fullName>
        <label>Ciblage par défaut INNO</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hors cible</fullName>
                </value>
                <value>
                    <fullName>Cible</fullName>
                </value>
                <value>
                    <fullName>Cible principale</fullName>
                </value>
                <value>
                    <fullName>Top Cible</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>INNO_valeur_palier1__c</fullName>
        <label>Valeur palier 1 INNO</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hors cible</fullName>
                </value>
                <value>
                    <fullName>Cible</fullName>
                </value>
                <value>
                    <fullName>Cible principale</fullName>
                </value>
                <value>
                    <fullName>Top Cible</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>INNO_valeur_palier2__c</fullName>
        <label>Valeur palier 2 INNO</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hors cible</fullName>
                </value>
                <value>
                    <fullName>Cible</fullName>
                </value>
                <value>
                    <fullName>Cible principale</fullName>
                </value>
                <value>
                    <fullName>Top Cible</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>INNO_valeur_palier3__c</fullName>
        <label>Valeur palier 3 INNO</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hors cible</fullName>
                </value>
                <value>
                    <fullName>Cible</fullName>
                </value>
                <value>
                    <fullName>Cible principale</fullName>
                </value>
                <value>
                    <fullName>Top Cible</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Libelle_NAF_2__c</fullName>
        <label>Libellé NAF 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pays__c</fullName>
        <label>Pays</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>France</fullName>
                </value>
                <value>
                    <fullName>Espagne</fullName>
                </value>
                <value>
                    <fullName>Brésil</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TAT_Palier1__c</fullName>
        <inlineHelpText>Palier 1: en dessous de ce nombre de salarié, le compte aura un ciblage correspondant à Valeur Palier1 TAT</inlineHelpText>
        <label>Palier 1 TAT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TAT_Palier2__c</fullName>
        <inlineHelpText>Palier 2: en dessous de ce nombre de salarié, le compte aura un ciblage correspondant à Valeur Palier 2 TAT</inlineHelpText>
        <label>Palier 2 TAT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TAT_Palier3__c</fullName>
        <inlineHelpText>Palier 3: en dessous de ce nombre de salarié, le compte aura un ciblage correspondant à Valeur Palier 3 TAT</inlineHelpText>
        <label>Palier 3 TAT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TAT_defaultCiblage__c</fullName>
        <label>Ciblage par défaut TAT</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hors cible</fullName>
                </value>
                <value>
                    <fullName>Cible</fullName>
                </value>
                <value>
                    <fullName>Cible principale</fullName>
                </value>
                <value>
                    <fullName>Top Cible</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TAT_valeur_palier1__c</fullName>
        <label>Valeur palier 1 TAT</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hors cible</fullName>
                </value>
                <value>
                    <fullName>Cible</fullName>
                </value>
                <value>
                    <fullName>Cible principale</fullName>
                </value>
                <value>
                    <fullName>Top Cible</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TAT_valeur_palier2__c</fullName>
        <label>Valeur palier 2 TAT</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hors cible</fullName>
                </value>
                <value>
                    <fullName>Cible</fullName>
                </value>
                <value>
                    <fullName>Cible principale</fullName>
                </value>
                <value>
                    <fullName>Top Cible</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TAT_valeur_palier3__c</fullName>
        <label>Valeur palier 3 TAT</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hors cible</fullName>
                </value>
                <value>
                    <fullName>Cible</fullName>
                </value>
                <value>
                    <fullName>Cible principale</fullName>
                </value>
                <value>
                    <fullName>Top Cible</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_de_compte_associe__c</fullName>
        <label>Type de compte associé</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_de_piste_associee__c</fullName>
        <label>Type de piste associé</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Code NAF 2</label>
    <nameField>
        <label>Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Codes NAF 2</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>